--- a/sentencing-eda.Rmd
+++ b/sentencing-eda.Rmd
@@ -65,7 +65,7 @@ On the other hand, numerical data is in number form. Some examples of numerical 
 
 There are some confusing data types that use numbers to *represent* categorical data, like zip code. You may live in the zip code 90201, which is a number, but you can't live in the zip code 90210.3. Only whole numbers, and specific ones at that, make sense here. We will learn more about using numbers to represent categorical data in this lesson.
 
-<!-- Add date-time discussion -->
+Finally, dates and times are special variables that are treated differently depending on the context and structure of the values. In some cases, especially when there are few discrete values, dates and times might be treated as categorical variables. In some formats and in other cases, dates and times might be treated as numerical variables (note: even though a date or time might be represented as a number, this is not the type of numerical variable where it makes sense to do math in the typical way!). When data are specific dates (with day, month, and year) and/or times (with hours, minutes, seconds), then R has special data types that capture dates and times along a continuum. We don't need to worry about that for this case study, though!
 
 **Can you identify which data type each variable in the federal criminal sentencing data is?**
 
@@ -94,29 +94,29 @@ Let's check our work by using `glimpse()` again:
 glimpse(us_sent)
 ```
 
-
-Great! It worked. `sex` is now of the `fct` data type. Now we can use this process to change the rest of the variables with incorrect data types. You can see that we don't always need to add labels, we just do that when we think it might be useful. <!-- Add sentence about year -->
+Great! It worked. `sex` is now of the `fct` data type. Now we can use this process to change the rest of the variables with incorrect data types. You can see that we don't always need to add labels, we just do that when we think it might be useful. Also notice we are treating `year` as a categorical variable for our analyses.
 
 ```{r}
 us_sent <- us_sent %>% 
   mutate(educ = factor(educ, levels = c(1, 3, 5, 6),
-                      labels = c("Less than HS", "HS Grad", "Some College", "College Grad")),
+                       labels = c("Less than HS", 
+                                  "HS Grad", 
+                                  "Some College", 
+                                  "College Grad")),
          year = factor(year),
          criminal_history = factor(criminal_history),
          guilty_plea = factor(guilty_plea))
 ```
 
-<!-- Update paragraph and code -->
-Now that our variable data types are sorted out, let's change one final component of our data set. Let's change the `other` level under the `race` variable to "ARI", which stands for "another racial identity", to clarify what we mean. To do this, we can use `mutate()` again in combination when `case_when()`, a function that allows you to condition an action on something being true. In this case, we are saying that we only want to change a value to "ARI" if `race` equals "other". 
+Now that our variable data types are sorted out, let's change one final component of our data set. Let's capitalize each category of the `race` variable using `str_to_title()`. Then we can use `fct_recode()` to turn `race` into a factor while also changing the "Other" level to "ARI", which stands for "another racial identity", to clarify what we mean. 
 
 ```{r}
 us_sent <- us_sent %>% 
-  mutate(race = case_when(race == "other" ~ "ARI",
-                          TRUE ~ race),
-         race = factor(race, levels = c("white", "black", "hispanic", "ARI")))
+  mutate(race =  str_to_title(race),
+         race = fct_recode(race, "ARI" = "Other"))
 ```
 
-You can use the `View(us_sent)` function again to take a look at all the alterations we made to the dataset. 
+You can use `View(us_sent)` again to take a look at all the alterations we made to the dataset. 
 
 Now that we have our data types sorted out, we can start exploring the data!
 
